--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,3 +1,3 @@
 <footer>
-    <p>Created by Mike Zeitzew : Copyright {{getCurrentYear}}</p>
+    <p>Created by M : Copyright {{getCurrentYear}}</p>
 </footer>
