--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,5 +1,6 @@
 <header>
-   <h1>{{pageTitle}} by Dre</h1>
+   <h1>{{pageTitle}} by M</h1>
    <p><a=href="/">Home</a></p>
    <p><a=href="/about">About</a></p>
+   <p><a=href="/projects">Projects</a></p>
 </header>
